# mHolmes

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
Benchmark Method/Mask/: mask_ElasticNet.py  mask_LSTM.py  mask_pinn.py
Benchmark Method/No mask/: ElasticNet.py  lstm.py  pinn.py
corpse_data/: class_abu_body_reverse.csv  class_abu_head_reverse.csv  reverse_face_keytaxa.csv  reverse_face_selected.csv  reverse_hip_keytaxa.csv  reverse_hip_selected.csv
mHolmes/: mHolmes_5fold_shap.py  mHolmes_foundation.py  mHolmes_mae.py  mHolmes_mask_exval.py  mHolmes_shap.py  mHolmes_tlmae.py  mHolmes_tlshap.py  mHolmes_transfer.py  mHolmes_with_mae.py  mHolmes_without_shap_mae.py
src/mHolmes/: cli.py
src/mHolmes/scripts/: mHolmes_foundation.py  mHolmes_mae.py  mHolmes_mask_exval.py  mHolmes_shap.py  mHolmes_tlmae.py  mHolmes_tlshap.py  mHolmes_transfer.py
src/mhm_core/data/: TimeSeries.py
src/src/data/: __init__.py
