[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mHolmes"
version = "1.1.0"
description = "mHolmes command-line tools"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
  "numpy>=2.2.0",
  "pandas>=2.3.0",
  "scikit-learn>=1.7.0",
  "torch>=2.6.0",
  "transformers==5.0.0", 
  "shap>=0.49.0",
  "accelerate>=1.3.0",
]

[project.scripts]
mhm = "mHolmes.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
mHolmes = ["scripts/*.py"]
